kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:
  name: example-ingress
spec:
  rules:
  - http:
      paths:
      - path: /ravendb/error
        pathType: Prefix
        backend:
          service:
            name: servicecontrol-error-service
            port:
              name: ravendb-http
      - path: /ravendb/audit
        pathType: Prefix
        backend:
          service:
            name: servicecontrol-audit-service
            port:
              name: ravendb-http
      - path: /rabbitmq-management
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              name: management
      - path: /rabbitmq-amqp
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              name: amqp
      - path: /
        pathType: Prefix
        backend:
          service:
            name: servicepulse-service
            port:
              name: frontend
